--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
+    "dayjs": "^1.11.8",
     "dotenv": "^16.1.3",
     "fastify": "^4.17.0",
     "knex": "^2.4.2",
